# kitsune

./: .cz.toml  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  commitlint.config.mjs  docker-compose.agent.yml  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-push.yml  ci.yml  codeql.yml  fuzz.yml  pages.yml  release.yml  security.yml
arena/: Dockerfile  captcha.go  captcha_test.go  doodle.go  emoji.go  gate.go  gate_test.go  go.mod  go.sum  levels.go  pact.go  pact_test.go  raster.go  rate.go  rate_test.go  rotate.go  rotate_test.go  slider.go  slider_test.go
arena/assets/: quickdraw.ATTRIBUTION.txt  quickdraw.ndjson
collector/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
collector/page/: index.html  styles.css
collector/src/: behavioral.ts  cdp.ts  collect.ts  detect.ts  index.ts  session.ts  signal.ts  transport.ts  types.ts
collector/test/: behavioral.test.ts  (+8 more)
contracts/: README.md  challenge.schema.json  coherence-rule.schema.json  finding.schema.json  session.schema.json  signal.schema.json  verdict.schema.json
detector/: Dockerfile  README.md  pyproject.toml
detector/src/kitsune_detector/: __init__.py  __main__.py  app.py  applicability.py  arena_page.py  config.py  contracts.py  demo.py  detector.py  geo.py  geo_refresh.py  ingest.py  ip_reputation.py  ip_reputation_refresh.py  models.py  pages.py  prevalence.py  reputation.py  scoring.py  store.py  styles.py
detector/src/kitsune_detector/coherence/: __init__.py  engine.py  predicates.py  rules.py
detector/src/kitsune_detector/data/: datacenter_cidrs.txt  prevalence_prior.json  proxy_exit_cidrs.txt
detector/src/kitsune_detector/static/: site.webmanifest
detector/tests/: __init__.py  conftest.py  test_app.py  test_applicability.py  test_contracts.py  test_css_beacon.py  test_detector.py  test_engine.py  test_examples_fixtures.py  test_fp_regression.py  test_geo.py  test_geo_refresh.py  test_ingest.py  test_ip_reputation.py  test_ip_reputation_refresh.py  test_models.py  test_pages.py  test_precision.py  test_predicates.py  test_prevalence.py  test_reputation.py  test_rule_firing.py  test_rules.py  test_scoring.py  test_store.py
docs/: README.md  adversary-emulation-roadmap.md  architecture.md  arena.md  behavioral-data.md  calibration.md  catalog.md  coordination-evasion.md  coordination-proxy.md  coordination-scenarios.md  coordination.md  deploy.md  detection-catalog.md  detection-landscape.md  evasion-catalog.md  findings.md  grounding.md  hosted-demo-plan.md  ip-reputation-data.md  landing-redesign.md  landscape.md  matrix.md  mobile-biomech-grounding.md  prevalence-model.md  red-team-roadmap.md  research-radar.md  scoreboard.md
edge/: Dockerfile  README.md  go.mod  go.sum
evaders/: README.md
evaders/agent/: README.md  agent.py  pyproject.toml
evaders/agent/src/kitsune_agent/: __init__.py  __main__.py  brain.py  runner.py
evaders/agent/tests/: __init__.py  test_brain.py
evaders/arena-solver-ocr/: Dockerfile  README.md  pyproject.toml
evaders/arena-solver-ocr/src/kitsune_arena_ocr/: __init__.py  __main__.py  recognizer.py  runner.py  solver.py
evaders/arena-solver-ocr/tests/: test_solver.py
evaders/primp/: Dockerfile  README.md  pyproject.toml
evaders/primp/src/kitsune_primp/: __init__.py  __main__.py  runner.py
evaders/primp/tests/: __init__.py  test_runner.py
fleet/: README.md  pyproject.toml
fleet/src/skulk/: __init__.py  cli.py  grade.py  model.py  runner.py  scope.py  strategies.py  strategy.py
fleet/tests/: test_skulk.py
harness/: README.md  pyproject.toml
harness/examples/: campaign-account-creation.yaml  campaign-account-takeover.yaml  campaign-scalping.yaml  campaign-scraping.yaml  engagement-cloned-residential.yaml  engagement-mixed-randomizer.yaml  engagement-scraper-fleet.yaml
harness/src/kitsune_harness/: __init__.py  __main__.py  allowlist.py  archetypes.py  balabit.py  berke_corpus.py  biomech.py  browserforge_corpus.py  calibration.py  coordination.py  coordination_scenarios.py  corpus.py  evasion_catalog.py  evasions.py  fleet.py  fleet_manager.py  fpgen_coherence.py  fpgen_corroborate.py  grounding.py  harness.py  intoli_corpus.py  live.py  live_coordination.py  liveboard.py  models.py  prevalence.py  prevalence_real_corroborate.py  readme_redteam.py  readme_stats.py  report.py  rps_scout.py  rule_catalog.py  rules_json.py  sapimouse_corpus.py  scenarios.py  scoreboard.py  tasks.py  template_calibration.py
harness/tests/: __init__.py  conftest.py  test_allowlist.py  test_archetypes.py  test_balabit.py  test_berke_corpus.py  test_biomech.py  test_calibration.py  test_calibration_methodology.py  test_coordination.py  test_coordination_scenarios.py  test_corpus.py  test_evasion_catalog.py  test_evasions.py  test_fleet.py  test_fleet_coordination_grounding.py  test_fleet_manager.py  test_fpgen_coherence.py  test_fpgen_corroborate.py  test_grounding.py  test_harness.py  test_intoli_corpus.py  test_lit_rule_captures.py  test_live.py  test_live_coordination.py  test_mapper_coverage.py  test_mapper_value_fidelity.py  test_prevalence.py  test_prevalence_mirror.py  test_prevalence_real_corroborate.py  test_prior_builder.py  test_readme_redteam.py  test_readme_stats.py  test_report.py  test_rps_scout.py  test_rule_catalog.py  test_rules_json.py  test_sapimouse_corpus.py  test_scenarios.py  test_scoreboard.py  (+2 more)
harness/tools/: chrome_quic_capture.mjs  css_beacon_ground.mjs  fleet_capture.sh  fleet_coordination_demo.py  headful_capture.mjs  mobile_no_touch_capture.mjs  native_lie_ground.mjs  webgl_caps_spoof_capture.mjs  webgl_renderer_spoof.mjs
scripts/: check_headers.py  check_license_isolation.py  frontier.sh  live_scoreboard.sh  verify_deployed.sh
(+306 files in other folders)
