[project]
name = "kitsune-detector"
version = "0.1.0"
description = "Kitsune blue-team detector: session-correlated, cross-layer incoherence scoring."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "jsonschema>=4.21",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "maxminddb>=2.5",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "httpx>=0.27",
  "types-pyyaml",
  "types-jsonschema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitsune_detector"]

[tool.pytest.ini_options]
addopts = "--cov=kitsune_detector --cov-branch --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
filterwarnings = [
  "error",
  # Third-party deprecations (Starlette/httpx) are noise we don't control; still error on our own.
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.coverage.run]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "@(abc\\.)?abstractmethod", "raise NotImplementedError"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# demo.py / pages.py / styles.py hold large embedded HTML/CSS/JS templates; Python line-length does not
# meaningfully apply to the embedded markup lines.
"src/kitsune_detector/demo.py" = ["E501"]
"src/kitsune_detector/pages.py" = ["E501"]
"src/kitsune_detector/styles.py" = ["E501"]
"src/kitsune_detector/arena_page.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
