[project]
name = "skulk"
version = "0.1.0"
description = "Skulk: fleet adversary-emulation for testing bot-detection coordination/fleet defenses (authorized targets only)."
requires-python = ">=3.11"
dependencies = []  # stdlib-only by design — portable, no install footprint, easy to vendor into an engagement

[project.scripts]
skulk = "skulk.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skulk"]

[tool.pytest.ini_options]
addopts = "--cov=skulk --cov-branch --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
omit = ["*/cli.py"]  # thin argparse glue — exercised via the CLI smoke test, not unit-covered line-by-line

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S"]
# S311: strategy randomness is reproducible fleet jitter, not crypto. S310: emitting to the target IS the
# tool's function — and the target is scope-checked (scope.check) before any request is made.
ignore = ["S311", "S310"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are the point of a test

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
