[project]
name = "kitsune-harness"
version = "0.1.0"
description = "Kitsune harness: run evaders against the detector and emit reproducible scoreboards."
requires-python = ">=3.11"
dependencies = [
  "kitsune-detector",
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "types-pyyaml",
]

[tool.uv.sources]
kitsune-detector = { path = "../detector", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitsune_harness"]

[tool.pytest.ini_options]
addopts = "--cov=kitsune_harness --cov-branch --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.coverage.run]
branch = true
omit = ["*/__main__.py", "*/browserforge_corpus.py"]  # external-data glue (browserforge); run via `task calibrate`

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "browserforge.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fpgen.*"
ignore_missing_imports = true
