# evaders/agent/pyproject — packaging + tooling for the claude-driven agent evader.
# uv project; playwright + httpx, pytest + coverage on the brain, ruff, mypy --strict.

[project]
name = "kitsune-agent"
version = "0.1.0"
description = "LLM-driven browser agent evader using claude -p as the reasoning engine."
requires-python = ">=3.11"
dependencies = ["playwright>=1.48", "httpx>=0.27"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitsune_agent"]

[tool.pytest.ini_options]
addopts = "--cov=kitsune_agent --cov-branch --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
# runner.py + __main__.py are browser/IO integration (tier-2), excluded from the unit gate.
omit = ["*/__main__.py", "*/runner.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
