# evaders/arena-solver-ocr/pyproject — packaging for the OCR evader (beat the arena text gate, owned only).
# uv project; httpx + transformers/torch/pillow for the real recognizer; the heavy ML is tier-2 (off the unit gate).

[project]
name = "kitsune-arena-ocr"
version = "0.1.0"
description = "Browserless OCR solver for the arena's distorted-text gate, using a HuggingFace TrOCR captcha model."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "transformers>=4.40", "torch>=2.2", "pillow>=10.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitsune_arena_ocr"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "--cov=kitsune_arena_ocr --cov-branch --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
# recognizer.py + __main__.py load/run the TrOCR model (tier-2 IO) — excluded from the unit gate.
omit = ["*/__main__.py", "*/runner.py", "*/recognizer.py"]
