# evaders/primp/pyproject — packaging + tooling for the primp impersonation evader.
# uv project; primp (Rust/BoringSSL) client, pytest + coverage, ruff, mypy --strict.

[project]
name = "kitsune-primp"
version = "0.1.0"
description = "primp evader: a Chrome-TLS-impersonating, JS-less HTTP client driving the live edge -> detector."
requires-python = ">=3.11"
dependencies = ["primp>=1.3"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitsune_primp"]

[tool.pytest.ini_options]
addopts = "--cov=kitsune_primp --cov-branch --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
omit = ["*/__main__.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
